--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "firebase-admin": "^13.4.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.539.0",
+    "moment": "^2.30.1",
     "next": "15.4.6",
     "nodemailer": "^7.0.5",
     "prisma": "^6.13.0",
