commit to add email verification method

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
-    "@prisma/client": "^6.13.0",
+    "@prisma/client": "^6.14.0",
     "@prisma/extension-accelerate": "^2.0.2",
     "@radix-ui/react-slot": "^1.2.3",
     "@reduxjs/toolkit": "^2.8.2",
@@ -23,6 +23,7 @@
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "cookie": "^1.0.2",
+    "crypto": "^1.0.1",
     "firebase": "^12.1.0",
     "firebase-admin": "^13.4.0",
     "jsonwebtoken": "^9.0.2",
@@ -30,7 +31,6 @@
     "moment": "^2.30.1",
     "next": "15.4.6",
     "nodemailer": "^7.0.5",
-    "prisma": "^6.13.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
@@ -45,10 +45,12 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
+    "prisma": "^6.14.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5"
